--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="zZCfdeJLbEZRDFZEXPGjKtUQifkQ9vXyqiDn9BgdXGE" />
     <title>iframe-squares-gateway</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
